Defined PeakInterval model
