# swagger_server/models/__init__.py
@@ -3,6 +3,6 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.peak_interval import PeakInterval
 from swagger_server.models.schedule import Schedule
-from swagger_server.models.schedule_peak import SchedulePeak
 from swagger_server.models.server import Server
