# swagger_server/models/peak_interval.py
@@ -9,18 +9,18 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class SchedulePeak(Model):
+class PeakInterval(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, start: str=None, end: str=None):  # noqa: E501
-        """SchedulePeak - a model defined in Swagger
+        """PeakInterval - a model defined in Swagger
 
-        :param start: The start of this SchedulePeak.  # noqa: E501
+        :param start: The start of this PeakInterval.  # noqa: E501
         :type start: str
-        :param end: The end of this SchedulePeak.  # noqa: E501
+        :param end: The end of this PeakInterval.  # noqa: E501
         :type end: str
         """
         self.swagger_types = {
@@ -37,32 +37,32 @@ class SchedulePeak(Model):
         self._end = end
 
     @classmethod
-    def from_dict(cls, dikt) -> 'SchedulePeak':
+    def from_dict(cls, dikt) -> 'PeakInterval':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The Schedule_peak of this SchedulePeak.  # noqa: E501
-        :rtype: SchedulePeak
+        :return: The PeakInterval of this PeakInterval.  # noqa: E501
+        :rtype: PeakInterval
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def start(self) -> str:
-        """Gets the start of this SchedulePeak.
+        """Gets the start of this PeakInterval.
 
 
-        :return: The start of this SchedulePeak.
+        :return: The start of this PeakInterval.
         :rtype: str
         """
         return self._start
 
     @start.setter
     def start(self, start: str):
-        """Sets the start of this SchedulePeak.
+        """Sets the start of this PeakInterval.
 
 
-        :param start: The start of this SchedulePeak.
+        :param start: The start of this PeakInterval.
         :type start: str
         """
         if start is None:
@@ -72,20 +72,20 @@ class SchedulePeak(Model):
 
     @property
     def end(self) -> str:
-        """Gets the end of this SchedulePeak.
+        """Gets the end of this PeakInterval.
 
 
-        :return: The end of this SchedulePeak.
+        :return: The end of this PeakInterval.
         :rtype: str
         """
         return self._end
 
     @end.setter
     def end(self, end: str):
-        """Sets the end of this SchedulePeak.
+        """Sets the end of this PeakInterval.
 
 
-        :param end: The end of this SchedulePeak.
+        :param end: The end of this PeakInterval.
         :type end: str
         """
         if end is None:
